--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
         android:layout_marginBottom="16dp"
         android:scrollbars="vertical"
         android:scrollHorizontally="true"
+        android:fadeScrollbars="false"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
